@@ -910,6 +910,11 @@ write_java_shell_script(Globals, MainModuleName, JarFileName, Stream, !IO) :-
         MercuryStdLibs ++ ["$CLASSPATH" | UserClasspath],
     ClassPath = string.join_list("${SEP}", Java_Incl_Dirs),
 
+    globals.lookup_accumulating_option(Globals, java_runtime_flags,
+        RuntimeFlags),
+    RuntimeOpts0 = string.join_list(" ", RuntimeFlags),
+    RuntimeOpts = escape_single_quotes_for_shell_script(RuntimeOpts0),
+
     globals.lookup_string_option(Globals, java_interpreter, Java),
     mangle_sym_name_for_java(MainModuleName, module_qual, ".", ClassName),
 
@@ -923,8 +928,10 @@ write_java_shell_script(Globals, MainModuleName, JarFileName, Stream, !IO) :-
         "esac\n",
         "CLASSPATH=", ClassPath, "\n",
         "export CLASSPATH\n",
-        "JAVA=${JAVA:-", Java, "}\n",
-        "exec \"$JAVA\" jmercury.", ClassName, " \"$@\"\n"
+        "MERCURY_JAVA=${MERCURY_JAVA:-'", Java, "'}\n",
+        "MERCURY_JAVA_OPTIONS=${MERCURY_JAVA_OPTIONS:-'", RuntimeOpts, "'}\n",
+        "exec \"$MERCURY_JAVA\" $MERCURY_JAVA_OPTIONS jmercury.", ClassName,
+            " \"$@\"\n"
     ], !IO).
 
     % For the MSYS version of the Java launcher script, there are a few
@@ -959,6 +966,11 @@ write_java_msys_shell_script(Globals, MainModuleName, JarFileName, Stream,
         Java_Incl_Dirs0),
     ClassPath = string.join_list("\\;", Java_Incl_Dirs),
 
+    globals.lookup_accumulating_option(Globals, java_runtime_flags,
+        RuntimeFlags),
+    RuntimeOpts0 = string.join_list(" ", RuntimeFlags),
+    RuntimeOpts = escape_single_quotes_for_shell_script(RuntimeOpts0),
+
     globals.lookup_string_option(Globals, java_interpreter, Java),
     mangle_sym_name_for_java(MainModuleName, module_qual, ".", ClassName),
 
@@ -968,9 +980,20 @@ write_java_msys_shell_script(Globals, MainModuleName, JarFileName, Stream,
         "DIR=$( cd \"${DIR}\" && pwd -W )\n",
         "CLASSPATH=", ClassPath, "\n",
         "export CLASSPATH\n",
-        "JAVA=${JAVA:-", Java, "}\n",
-        "exec \"$JAVA\" jmercury.", ClassName, " \"$@\"\n"
+        "MERCURY_JAVA=${MERCURY_JAVA:-'", Java, "'}\n",
+        "MERCURY_JAVA_OPTIONS=${MERCURY_JAVA_OPTIONS:-'", RuntimeOpts, "'}\n",
+        "exec \"$MERCURY_JAVA\" $MERCURY_JAVA_OPTIONS jmercury.", ClassName,
+            " \"$@\"\n"
     ], !IO).
+
+:- func escape_single_quotes_for_shell_script(string) = string.
+
+escape_single_quotes_for_shell_script(S) =
+    ( if string.contains_char(S, '\'') then
+        string.replace_all(S, "'", "'\\''")
+    else
+        S
+    ).
 
 :- pred write_java_batch_file(globals::in, module_name::in, file_name::in,
     io.text_output_stream::in, io::di, io::uo) is det.
@@ -984,16 +1007,22 @@ write_java_batch_file(Globals, MainModuleName, JarFileName, Stream, !IO) :-
         ["%CLASSPATH%" | UserClasspath],
     ClassPath = string.join_list(";", Java_Incl_Dirs),
 
+    globals.lookup_accumulating_option(Globals, java_runtime_flags,
+        RuntimeFlags),
+    RuntimeOpts = string.join_list(" ", RuntimeFlags),
+
     globals.lookup_string_option(Globals, java_interpreter, Java),
     mangle_sym_name_for_java(MainModuleName, module_qual, ".", ClassName),
 
     io.write_strings(Stream, [
         "@echo off\n",
         "rem Automatically generated by the Mercury compiler.\n",
-        "setlocal\n",
+        "setlocal enableextensions\n",
         "set DIR=%~dp0\n",
         "set CLASSPATH=", ClassPath, "\n",
-        Java, " jmercury.", ClassName, " %*\n"
+        "if not defined MERCURY_JAVA_OPTIONS set MERCURY_JAVA_OPTIONS=",
+            RuntimeOpts, "\n",
+        Java, " %MERCURY_JAVA_OPTIONS% jmercury.", ClassName, " %*\n"
     ], !IO).
 
 get_mercury_std_libs_for_java(Globals, !:StdLibs) :-
