@@ -408,6 +408,14 @@ Changes to the Mercury compiler
 * The deprecated option `--trail-segments` has been deleted and the grade
   component `trseg` is no longer accepted as a synonym for `tr`.
 
+* `--javac-flags` is now accepted as a synonym for `--java-flags`. Similarly
+  `--javac-flag` is now accepted as synonym for `--java-flags`.
+
+* The new options `--java-runtime-flags` and `--java-runtime-flags` can be
+  used to set flags for the Java interpreter in the launcher shell scripts or
+  batch files generated by the compiler when creating executables in the `java`
+  grade.
+
 Portability improvements
 ------------------------
 
